[metadata]
name = zhe shi yi ge bao
version = 0.0.1
author = your father
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/regionLiu/test_pip.git
project_urls =
    Bug Tracker = https://github.com/regionLiu/test_pip.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src